@@ -5,6 +5,8 @@ Version 1.3.1 (unreleased)
     doing direct I/O for a significant write performance increase.
     A stxxl::file::SYNC flag has been added to allow forcing the O_*SYNC flags
     when opening files.
+  - Lock files by default (if implemented for this file type), can by disabled
+    via stxxl::file::NO_LOCK.
 * Internal changes, not user visible
   - change handling of (empty) filler elements in typed_block to fix
     mismatching struct size in nested blocks
